--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
 /* header section code */
 .header{
     max-width: 1170px;
-    margin: 5rem auto;
+    margin: 2rem auto;
 }
 .nabar{
     display: flex;
@@ -49,8 +49,176 @@ body{
     color: rgb(255, 84, 0);
 }
 /*  main section code start */
-/* .main{
+.main{
     max-width: 1170px;
     margin: 0 auto;
+}
+/* .main > section{
+    margin: 80px 0;
 } */
- 
+ /* banner section code */
+ .banner-container{
+    background-image: url(/Images/Group\ 13\ \(1\)\ \(1\).png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+    /* background: linear-gradient(180.00deg, rgba(19, 19, 24, 0.8),rgba(19, 19, 24, 0) 100%); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7rem 0;
+ }
+ /* .container{
+ } */
+ .travel-heading{
+    color: rgb(255, 255, 255);
+    font-family: Mulish;
+    font-size: 64px;
+    font-weight: 800;
+    line-height: 80px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 40px;
+ }
+ .travel-title{
+    color: rgb(255, 255, 255);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+     width: 676px;
+    margin-bottom: 60px;
+ }
+ .travel-input{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.3);
+    padding: 1rem;
+ }
+input, select{
+    width: 174px;
+    height: 52px;
+    border-radius: 8px;
+    background: rgb(255, 255, 255);
+    border: none;
+    color: rgba(19, 19, 24, 0.5);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0%;
+    text-align: center;
+ } 
+ .btn-priamary{
+    color: rgb(255, 255, 255);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0%;
+    text-align: center;
+    border-radius: 8px;
+    background: rgb(255, 84, 0);
+    border: none;
+    width: 174px;
+    height: 52px;
+ }
+ /*  popular section code  */
+.container-popular{
+    margin: 80px auto;
+   display: grid;
+   grid-template-columns: repeat(2,1fr);
+   gap: 3rem;
+ }
+ .content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+ }
+ .popular{
+    color: rgb(19, 19, 24);
+    font-family: Mulish;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 50px;
+ }
+ .popular-title{
+    color: rgba(19, 19, 24, 0.7);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+ }
+ .ul .li{
+    color: rgba(19, 19, 24, 0.7);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+ }
+ /* cuntary section code */
+ .card-container{
+    margin: 60px 0;
+ }
+ .card-container img {
+    width: 100%;
+    height: 100%;
+ }
+ .row-1,
+ .row-2,
+ .row-3{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin: 1rem;
+    gap: 1rem;
+ }
+ .row-2{
+    /* grid-template-columns: repeat(3,1fr); */
+    grid-template-columns: 0.8fr 1fr 0.7fr;
+}
+ .row-3{
+    grid-template-columns: 0.8fr 1fr;
+ }
+.country-card{
+    position: relative;
+}
+.pa{
+    position: absolute;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    font-size: 28px;
+    font-weight: bold;
+    transform: translate(-50%, -50%);
+}    
+.card-container h6{
+    color: rgb(19, 19, 24);
+    font-family: Mulish;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 50px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.card-container p{
+    color: rgba(19, 19, 24, 0.7);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin: 20px;
+}
+/* Responsiv section code */
+/* @media screen and (max-width:600px){
+    
+} */
